crates/bc-cli/tests/cli/snapshots/cli__export__export_beancount_not_implemented.snap
---
source: crates/bc-cli/tests/cli/export.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: export to 'beancount' is not yet available; exporter plugins will be added in a future milestone
