crates/bc-cli/tests/cli/snapshots/cli__export__export_beancount_with_data.snap
---
source: crates/bc-cli/tests/cli/export.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
1970-01-01 open Checking
1970-01-01 open Groceries

2026-03-01 * "Weekly groceries"
  Checking  -80.00 AUD
  Groceries  80.00 AUD

----- stderr -----
