crates/bc-cli/tests/cli/snapshots/cli__export__export_ledger_empty_db.snap
---
source: crates/bc-cli/tests/cli/export.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
----- stderr -----
